Stop making unit tests their own module