@@ -189,12 +189,6 @@
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
                     <parallel>all</parallel>
-                    <argLine>
-                        --add-opens uk.autores.processing/uk.autores.processing=uk.autores.processing.test
-                        --add-opens uk.autores.processing/uk.autores.processing.handlers=uk.autores.processing.test
-                        --add-opens uk.autores.processing/uk.autores.processing.handlers.debug=uk.autores.processing.test
-                        --add-exports uk.autores.processing/uk.autores.processing=uk.autores.processing.test
-                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
